header адаптирован от 320px до .....

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
     </header>
-    <div class="help">
+    <!-- <div class="help">
         <h2 class="help_h2">What we do to help our client grow in digital era</h2>
         <div class="help_descr">
             <div class="help_block"><img src="img/help/1.png" alt="picture" class="help_block_img">
@@ -96,8 +96,7 @@
             <p class="footer_rights">2020 All rights reserved.</p>
 
        
-        </footer>
+        </footer> -->
 
 </body>
-
 </html>
