адаптирован блок help под размеры от 320px до ...

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
     </header>
-    <!-- <div class="help">
+    <div class="help">
         <h2 class="help_h2">What we do to help our client grow in digital era</h2>
         <div class="help_descr">
             <div class="help_block"><img src="img/help/1.png" alt="picture" class="help_block_img">
@@ -63,7 +63,7 @@
 
 
     </div>
-    <div class="project center">
+    <!-- <div class="project center">
         <h2 class="project_h2">Our Finished Project</h2>
         <p class="project_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
