адаптирован блок project под размеры от 320px до ...

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
     </div>
-    <!-- <div class="project center">
+    <div class="project center">
         <h2 class="project_h2">Our Finished Project</h2>
         <p class="project_p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -96,7 +96,7 @@
             <p class="footer_rights">2020 All rights reserved.</p>
 
        
-        </footer> -->
+        </footer>
 
 </body>
 </html>
